@@ -1,3 +1,8 @@
+2011-08-23  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/31600
+	* gfortran.dg/use_16.f90: New.
+
 2011-08-22  Uros Bizjak  <ubizjak@gmail.com>
 	    Kirill Yukhin  <kirill.yukhin@intel.com>
 
