@@ -1,3 +1,10 @@
+2011-08-23  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/31600
+	* symbol.c (gfc_add_type): Better diagnostic if redefining
+	use-associated symbol.
+	* module.c (gfc_use_module): Use module name as locus.
+
 2011-08-22  Gabriel Charette  <gchare@google.com>
 
 	* cpp.c (gfc_cpp_init): Force BUILTINS_LOCATION for tokens
